# dhcproto

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark.txt
.github/actions-rs/: grcov.yml
.github/workflows/: actions.yml
benches/: decode.rs  encode.rs
dhcproto-macros/: Cargo.toml
dhcproto-macros/src/: lib.rs
examples/: dhcp_v4_client.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode.rs
libs/proto/: Cargo.toml
libs/proto/src/: decoder.rs  encoder.rs  error.rs  lib.rs  message.rs  option.rs  options.rs
libs/proto/src/msg/: flags.rs  htype.rs  mod.rs  opcode.rs  options.rs
libs/proto/src/v4/: flags.rs  mod.rs  opcode.rs  options.rs  relay.rs
libs/proto/src/v6/: mod.rs  options.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: decoder.rs  encoder.rs  error.rs  lib.rs
src/v4/: borrowed.rs  bulk_query.rs  flags.rs  fqdn.rs  generic.rs  htype.rs  mod.rs  opcode.rs  options.rs  relay.rs  vendor.rs
src/v6/: duid.rs  htype.rs  messages.rs  mod.rs  option_codes.rs  options.rs  oro_codes.rs
src/v6/options/: auth.rs  clientdata.rs  clientid.rs  dnsservers.rs  domainlist.rs  elapsedtime.rs  iaaddr.rs  iana.rs  iapd.rs  iaprefix.rs  iata.rs  informationrefreshtime.rs  interfaceid.rs  linkaddress.rs  lqclientlink.rs  lqrelaydata.rs  maxrt.rs  mod.rs  oro.rs  preference.rs  query.rs  rapidcommit.rs  reconfmsg.rs  relayid.rs  relaymsg.rs  serverid.rs  status.rs  unicast.rs  userclass.rs  vendorclass.rs  vendoropts.rs
