[package]
name = "dhcproto"
version = "0.9.0-alpha"
authors = ["Ian Laidlaw <ilaidlaw@bluecatnetworks.com>", "Evan Cameron <cameron.evan@gmail.com>"]
edition = "2021"
description = """
A DHCP parser and encoder for DHCPv4/DHCPv6. `dhcproto` aims to be a functionally complete DHCP implementation.
"""
categories = ["network-programming", "encoding","parser-implementations"]
repository = "https://github.com/bluecatengineering/dhcproto"
keywords = ["dhcp","dhcpv4","dhcpv6"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
hex = "0.4.3"
trust-dns-proto = { version = "0.21.2", default-features = false }
url = "2.2.2"

[features]
default = []
serde = ["dep:serde", "url/serde"]

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
