[package]
name = "dhcproto"
version = "0.12.0"
authors = [
	"Ian Laidlaw <ilaidlaw@bluecatnetworks.com>",
	"Evan Cameron <cameron.evan@gmail.com>",
]
edition = "2021"
description = """
A DHCP parser and encoder for DHCPv4/DHCPv6. `dhcproto` aims to be a functionally complete DHCP implementation.
"""
categories = ["network-programming", "encoding", "parser-implementations"]
repository = "https://github.com/bluecatengineering/dhcproto"
keywords = ["dhcp", "dhcpv4", "dhcpv6"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.6.0"
thiserror = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
hex = "0.4.3"
trust-dns-proto = { version = "0.22.0", default-features = false }
url = "2.2.2"
dhcproto-macros = { path = "./dhcproto-macros", version = "0.1.0" }
ipnet = "2.5"

[features]
default = []
serde = [
	"dep:serde",
	"url/serde",
	"ipnet/serde",
	"trust-dns-proto/serde-config",
]

[dev-dependencies]
criterion = "0.4.0"
serde_json = "1.0"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
