[package]
name = "dhcproto"
version = "0.14.0"
authors = [
	"Ian Laidlaw <ilaidlaw@bluecatnetworks.com>",
	"Evan Cameron <cameron.evan@gmail.com>",
]
edition = "2024"
description = """
A DHCP parser and encoder for DHCPv4/DHCPv6. `dhcproto` aims to be a functionally complete DHCP implementation.
"""
categories = ["network-programming", "encoding", "parser-implementations"]
repository = "https://github.com/bluecatengineering/dhcproto"
keywords = ["dhcp", "dhcpv4", "dhcpv6"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.12"
rand = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
hickory-proto = { version = "0.25.2", default-features = false }
dhcproto-macros = { path = "./dhcproto-macros", version = "0.2.0" }
ipnet = "2.5"

[features]
default = []
serde = ["dep:serde", "ipnet/serde", "hickory-proto/serde"]

[dev-dependencies]
criterion = "0.4.0"
serde_json = "1.0"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
