[package]
name = "dhcproto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dhcproto]
path = ".."

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false
